# codehorizon-api

./: .env.example  .gitignore  Dockerfile  MIGRATION_PLAN.md  Makefile  README.md  build.gradle.kts  docker-compose.local.yml  docker-compose.yml  justfile  meson.build  prometheus.yml  settings.gradle.kts
.github/workflows/: ci-cd.yml
docker/: java-runner.Dockerfile  javascript-runner.Dockerfile  python-runner.Dockerfile
src/main/kotlin/: LoggerConfig.kt
src/main/kotlin/com/makkenzo/codehorizon/: CloudflareR2Config.kt  CodehorizonApplication.kt  SecurityConfig.kt  SwaggerConfig.kt  WebConfig.kt
src/main/kotlin/com/makkenzo/codehorizon/annotations/: CookieAuth.kt  JwtAuth.kt
src/main/kotlin/com/makkenzo/codehorizon/aspects/: CookieAuthAspect.kt  JwtAuthAspect.kt
src/main/kotlin/com/makkenzo/codehorizon/configs/: AsyncConfig.kt  AuthenticationEntryPoint.kt  (+9 more)
src/main/resources/: application-dev.properties  application-prod.properties  application.properties  logback-spring.xml
src/main/resources/runners/: TestRunner.java  javascript_default_runner.js  python_default_runner.py  run_java_tests.sh
src/main/resources/templates/: achievement-unlocked-email.html  certificate-template.html  course-purchase-confirmation-email.html  mentorship-application-approved-email.html  mentorship-application-rejected-email.html  new-mentorship-application-admin-email.html  new-review-on-your-course-email.html  reset-password-email.html  student-completed-your-course-email.html  verification-email.html
src/test/kotlin/com/makkenzo/codehorizon/: CodehorizonApplicationTests.kt
(+174 files in other folders)
